# ai-research-bot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/research_bot/: __init__.py  __main__.py  main.py
src/research_bot/agents/: __init__.py  analyst.py  base.py  director.py  planner.py  researcher.py  writer.py
src/research_bot/config/: __init__.py  settings.py
src/research_bot/crews/: __init__.py  research_crew.py
src/research_bot/models/: __init__.py  report.py  research.py
src/research_bot/services/: __init__.py  research_service.py
src/research_bot/tasks/: __init__.py  analysis.py  base.py  planning.py  report.py  research.py  review.py
src/research_bot/tools/: __init__.py  scrape_tool.py  tavily_search.py
